# FaceSwapping

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: DesignChoices.md
evaluation/: tensorboard_logger.py  utils.py
inference/: inference_I2I.py  inference_I2V.py  inference_base.py  inference_timeline_I2I.py
models/: arcface_loader.py  config.py  discriminator.py  generator.py  parameter_count.py  simswap.py
models/pg_modules/: projector.py
preprocess/: data_summary.py  face_parsing.py  filter_crop_align.py
train/: dataloader.py  trainer.py
