[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "demofaceswapping"
version = "0.1.0"
description = "Face swapping experiments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["train", "preprocess", "models", "evaluation", "inference"]
